; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kernel/cpu/mce/extr_inject.c_setup_inj_struct.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kernel/cpu/mce/extr_inject.c_setup_inj_struct.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }
%struct.mce = type { i32, i32, i32, i32 }

@boot_cpu_data = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mce*)* @setup_inj_struct to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setup_inj_struct(%struct.mce* %0) #0 {
  %2 = alloca %struct.mce*, align 8
  store %struct.mce* %0, %struct.mce** %2, align 8
  %3 = load %struct.mce*, %struct.mce** %2, align 8
  %4 = call i32 @memset(%struct.mce* %3, i32 0, i32 16)
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @boot_cpu_data, i32 0, i32 1), align 4
  %6 = load %struct.mce*, %struct.mce** %2, align 8
  %7 = getelementptr inbounds %struct.mce, %struct.mce* %6, i32 0, i32 3
  store i32 %5, i32* %7, align 4
  %8 = call i32 (...) @ktime_get_real_seconds()
  %9 = load %struct.mce*, %struct.mce** %2, align 8
  %10 = getelementptr inbounds %struct.mce, %struct.mce* %9, i32 0, i32 2
  store i32 %8, i32* %10, align 4
  %11 = call i32 @cpuid_eax(i32 1)
  %12 = load %struct.mce*, %struct.mce** %2, align 8
  %13 = getelementptr inbounds %struct.mce, %struct.mce* %12, i32 0, i32 1
  store i32 %11, i32* %13, align 4
  %14 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @boot_cpu_data, i32 0, i32 0), align 4
  %15 = load %struct.mce*, %struct.mce** %2, align 8
  %16 = getelementptr inbounds %struct.mce, %struct.mce* %15, i32 0, i32 0
  store i32 %14, i32* %16, align 4
  ret void
}

declare dso_local i32 @memset(%struct.mce*, i32, i32) #1

declare dso_local i32 @ktime_get_real_seconds(...) #1

declare dso_local i32 @cpuid_eax(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
